unpackaged/main/default/objects/Client_Case_Relation__c/Client_Case_Relation__c.object-meta.xml
<CustomObject>
    <label>Client Case Relation</label>
    <nameField>
        <displayFormat>CCR-{00000000}</displayFormat>
        <label>Client Case Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Case Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>