unpackaged/main/default/objects/Client_Case_Relation__c/fields/axcessa_Group__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>axcessa Group</label>
    <referenceTo>axcessa_Group__c</referenceTo>
    <relationshipLabel>Client Case Relations</relationshipLabel>
    <relationshipName>Client_Case_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>