unpackaged/main/default/objects/Client_Case_Relation__c/fields/axcessa_Store__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>axcessa Store</label>
    <referenceTo>axcessa_Platform_Engagement__c</referenceTo>
    <relationshipLabel>Client Case Relations</relationshipLabel>
    <relationshipName>Client_Case_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>