unpackaged/main/default/objects/Client_Case_Relation__c/fields/Case_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_To__c</fullName>
    <formula>Client_Case__r.Owner__r.FirstName &amp; &#39; &#39; &amp;  Client_Case__r.Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Assigned To</label>
    <type>Text</type>
</CustomField>