unpackaged/main/default/objects/Client_Case_Relation__c/fields/Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Client_Case__c</fullName>
    <label>Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Client Case Relations</relationshipLabel>
    <relationshipName>Client_Case_Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>