unpackaged/main/default/objects/Client_Case_Relation__c/fields/Last_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement__c</fullName>
    <label>Last Engagement</label>
    <type>Date</type>
</CustomField>